flowcontroller/yamls/networkpolicy-allow-flow-api-to-flink.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flow-api-to-flink
  annotations:
    flowDef:
      priority: 1
spec:
  policyTypes:
  - Ingress
  podSelector: 
    matchLabels:
      app: flink
      component: jobmanager
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: horizon-api
      namespaceSelector:
        matchLabels:
          name: ((/spec/namespace))
    ports:
    - protocol: TCP
      port: 8081
